Initial finance manager backend