@@ -1,32 +1,62 @@
 package com.anvesh.finance_manager.security;
 
 import com.anvesh.finance_manager.entity.User;
+
 import com.anvesh.finance_manager.repository.UserRepository;
+
 import org.springframework.beans.factory.annotation.Autowired;
+
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.*;
+
+import org.springframework.security.core.userdetails.UserDetails;
+
+import org.springframework.security.core.userdetails.UserDetailsService;
+
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
+
 import org.springframework.stereotype.Service;
 
-import java.util.List;
+import java.util.Collections;
 
 @Service
-public class CustomUserDetailsService implements UserDetailsService {
+public class CustomUserDetailsService
+        implements UserDetailsService {
 
     @Autowired
     private UserRepository userRepository;
 
     @Override
-    public UserDetails loadUserByUsername(String email)
-            throws UsernameNotFoundException {
+    public UserDetails loadUserByUsername(
+            String email
+    ) throws UsernameNotFoundException {
 
-        User user = userRepository.findByEmail(email)
-                .orElseThrow(() ->
-                        new UsernameNotFoundException("User not found"));
+        // NORMALIZE EMAIL
+        email =
+                email.trim()
+                        .toLowerCase();
+
+        User user =
+                userRepository
+                        .findByEmail(email)
+                        .orElseThrow(() ->
+
+                                new UsernameNotFoundException(
+                                        "User not found"
+                                )
+                        );
 
         return new org.springframework.security.core.userdetails.User(
+
                 user.getEmail(),
+
                 user.getPassword(),
-                List.of(new SimpleGrantedAuthority("USER"))
+
+                Collections.singletonList(
+
+                        new SimpleGrantedAuthority(
+                                "USER"
+                        )
+                )
         );
     }
 }
